# sediment-ml

./: .gitignore  README.md  pyproject.toml
data/shapefiles/: README.txt
data/shapefiles/coastline.shp/: coastline.dbf  coastline.sbn  coastline.sbx  coastline.shp  coastline.shp.xml  coastline.shx
data/shapefiles/coastline_nwhi/: bathy_contours_nwhi.dbf  bathy_contours_nwhi.sbn  bathy_contours_nwhi.sbx  bathy_contours_nwhi.shp.xml  bathy_contours_nwhi.shx  coastline_nwhi.dbf  coastline_nwhi.docx  coastline_nwhi.sbn  coastline_nwhi.sbx  coastline_nwhi.shp  coastline_nwhi.shp.xml  coastline_nwhi.shx
output/: intersections.csv
scripts/: coastline_clipped_utm.geojson  coastline_outline_clipped.geojson  coastline_tile_pipeline.py  coastline_tile_pipeline_adjacent.py  coastline_tile_pipeline_old.py  visualize.py
scripts/output/: intersections.csv  intersections_extended.csv  intersections_no_adjacent.csv
scripts/training/: train.py  training_config_20250624_173259.json
