[project]
name = "sediment-ml"
version = "0.1.0"
description = ""
authors = [
    {name="Madeline Berger", email="mmtb@hawaii.edu"},
    {name="Ari Essunfeld", email="ariessunfeld@gmail.com"},
    {name="Paulina Essunger", email="paulina.essunger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "albumentations (>=2.0.5,<3.0.0)",
    "segmentation-models-pytorch (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false